--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -534,7 +534,7 @@
     },
     "city-center": {
       "title": "The City Center",
-      "ruleSummary": "Gain 3 fences | repair/hotel/gain facility | market buy/sell.",
+      "ruleSummary": "Gain 3 fences {'|'} repair/hotel/gain facility {'|'} market buy/sell.",
       "actionSelection": "DiNO performs 1-3 actions:",
       "receiveFences": "DiNO receives three new fences to its reserve and may replace damaged habitats.",
       "facilityBuildRepair": "DiNO repairs one facility if one is damaged (highest cost); otherwise DiNO builds a new facility based on the following criteria:",
@@ -600,7 +600,6 @@
     },
     "site-common": {
       "locationUse": "Only used if DiNO has less than two complete DNA sets.",
-      "noResources": "DiNO spends no resources and keeps all drawn cards.",
       "cardAssignment": "Assign cards to preferred matching DNA sets or place them on the bottom of the Spare Stack.",
       "newStack": "Refresh preferred stacks if empty."
     }
